API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

14-Jan-2001	Joachim Ansorg <jansorg@gmx.de>
	Updated sk.conf

13-Jan-2001	Chris Little <chrislit@crosswire.org>
	Added arg to vpl2mod to work with NT-only translations

30-Dec-2000	Chris Little <chrislit@crosswire.org>
	Fixed prn2sword so that it should work with new OLBs

22-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added 'micros' a mini GUI for PDAs

20-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
    Added new compile target architecture: arm
    Changed the simple lookup cmdline example to work with any
        module.  Tested on iPaq SA1110.  Need to optimize
        size/speed!

15-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	zText compess driver working
	Fixed ZipCompress
	Optimized SWCompress
	mod2zmod conversion utility working
	Added support for zText modules in SWMgr with 2 new
		parameters: BlockType=[VERSE|CHAPTER|BOOK]
		CompressType=[LZSS|ZIP]

10-Dec-2000     Chris Little <chrislit@crosswire.org>
	Added addld utility for adding single entries to LD modules
	
09-Dec-2000     Chris Little <chrislit@crosswire.org>
	Added addvs utility for adding single verses to modules
	Added Diatheke (and CGI/Tcl/PQA frontends to it) to source
	        tree
	ThML filters (all) fixed to support longer tag lengths and
	        decode HTML ampersand codes (e.g. &nbsp;)
	ThMLRTF filter fixed to avoid printing extra '>'s

02-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added write support for RawLD
	Added new utility modwrite to call a write interface

30-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Fixed memory leak in write methods of RawText
	Added some initial support for writing to zText
	Added a 'not working yet' mod2zmod utility


20-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, step2vpl, for dumping BSISG STEP module in
		vpl format.
	Added new make target: install_config to put a basic install on
		a box.