@@ -1,6 +1,10 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+18-Jan-2001	Joachim Ansorg <jansorg@gmx.de>
+	RawText::Search: Do not check for a valid key if we don't use a scope, this speeds up 
+	the normal search of indexed modules (IMHO a lot for large result sets)
+
 14-Jan-2001	Joachim Ansorg <jansorg@gmx.de>
 	Updated sk.conf
 
